--- a/myweb/user_app/templates/login.html
+++ b/myweb/user_app/templates/login.html
@@ -12,11 +12,6 @@
 <script src="{% static 'js/jquery-1.7.2.min.js' %}" type="text/javascript"></script>
 <script type="text/javascript">
 
-function getCookie(name) {
-  var value = "; " + document.cookie;
-  var parts = value.split("; " + name + "=");
-  if (parts.length == 2) return parts.pop().split(";").shift();
-}
 $(function() {
 	$('#login').click(function() {
 		var name_state = $('#name');
@@ -61,7 +56,7 @@ $(function() {
 				  xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
 				  name = document.getElementById('name').value;
 				  pwd = document.getElementById('psd').value;
-				  xmlhttp.send("name="+name+"&pwd="+pwd+'&csrfmiddlewaretoken='+getCookie('csrftoken'));
+				  xmlhttp.send("name="+name+"&pwd="+pwd+'&csrfmiddlewaretoken='+'{{ csrf_token }}');
 			}
 
 	});
